syntax = "proto3";
package ekko;

message EchoRequest {
    uint64 timestamp = 1;
    bytes payload = 2;
}

message EchoResponse {
    uint64 timestamp = 1;
    bytes payload = 2;
}

service Ekko {
    rpc UnaryEcho(EchoRequest) returns (EchoResponse) {}
    rpc ServerStreamingEcho(EchoRequest) returns (stream EchoResponse) {}
    rpc ClientStreamingEcho(stream EchoRequest) returns (EchoResponse) {}
    rpc BidirectionalStreamingEcho(stream EchoRequest) returns (stream EchoResponse) {}
}